# cartographer

./: AGENT_CONTRIBUTE.md  AGENT_DISPATCHER.md  AGENT_ONBOARDING.md  BUILDSHEET-webui-v3.md  BUILDSHEET.md  CART_MODEL_SUMMARIES_SPEC.md  CART_PHASE3_SPEC.md  CART_PHASE4_SPEC.md  CART_PHASE5_BUILDSHEET.md  CART_PHASE5_SPEC.md  CART_RUNTIME_AUTOMATION_SPEC.md  CART_SYSTEM_HANDOVER_2026-04-17.md  CART_VISUAL_GRAPH_V1_SPEC.md  CLAUDE_OPENCODE_REVIEW.md  DEVELOPERS.md  DISCORD_CARTOGRAPHER_THREAD.md  HANDOVER.md  HERMES_BOOTSTRAP.md  MAPSOS_BRIDGE_V2_SPEC.md  OPENCODE_IMPL_SPEC.md  POLYCULE_HANDOVER.md  QMD_OPTIONAL_SPEC.md  README.md  SPEC.md  announce.zsh  hermes-start.zsh  killian.md  pyproject.toml
cartographer/: __init__.py  agent_memory.py  atlas.py  blocks.py  cli.py  config.py  daily_brief.py  delete.py  discover.py  embed.py  external_import.py  graph_export.py  graph_plugins.py  graph_serve.py  guardrails.py  hooks.py  index.py  intake_parser.py  mapsos.py  notes.py  obsidian.py  operating_truth.py  patterns.py  plugins.py  profiles.py  query_router.py  session_import.py  stats.py  tasks.py  templates.py  temporal_patterns.py  temporal_truth.py  therapy.py  think.py  transclusion.py  tui.py  vimwiki.py  walk.py  wires.py  working_set.py  (+1 more)
jinja/: agent-log.md.j2
orchestra/: README.md  cart-health  cart-inbox  cart-recent  cart-state-today  cart-today  cart-worklog
plugins/: agent-ingest.py  avoidance.py  daily-brief.py  lovelife.py  manifest.json  summarize.py  temporal-patterns.py  therapy.py
profiles/: README.md  default.toml  emotional-topology.toml
(+53 files in other folders)
