[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cartographer"
version = "0.1.0"
description = "local-first knowledge filesystem"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "textual>=0.50.0",
    "fastembed>=0.5.1,<0.8.0",
    "onnxruntime>=1.20.0,<1.24.0",
]

[project.scripts]
cart = "cartographer.cli:main"
cartog = "cartographer.cli:main"
cartographer = "cartographer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cartographer*"]
